2018-08-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added preview feature, resolves #61

2018-07-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added custom permissions for BE module, resolves #49

2018-07-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added property for fetching value from multi-dimensional array, resolves #52

2018-07-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to group configurations, resolves #48

2018-06-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used ConfigurationRepository in Scheduler task list of additional fields, resolves #40
	* Improved the reporting utility, resolves #31

2018-06-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed Log module logic to load data from the server, resolves #53

2018-06-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added debugging on the command-line, resolves #59

2018-05-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added context to Importer calls and log entries, resolves #27

2018-03-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Reviewed the UidRepository class, resolves #39

2018-03-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed all deprecated properties and API, dropped TYPO3 7 compatibility, resolves #57

2018-03-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected extension dependencies, resolves #56
	* Released version 4.0.2

2018-02-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Made sync warning sticky, resolves #55

2018-02-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added handling of disabled Scheduler tasks, resolves #54
	* Replaced :class: construct in documentation, resolves #46
	* Added message about running synchronisation, resolves #50
	* Released version 4.0.1

2018-01-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected handling of moved records, resolves #32

2017-11-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 4.0.0

2017-11-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>