@@ -1,3 +1,7 @@
+2018-08-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Caught exceptions happening during DataHandler operations, resolves #63
+
 2018-08-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added preview feature, resolves #61
